| Bug #38746 | Falcon does not build on linux with valgrind enabled | ||
|---|---|---|---|
| Submitted: | 12 Aug 2008 12:24 | Modified: | 27 Aug 2008 18:56 |
| Reporter: | Alexander Nozdrin | ||
| Status: | Closed | ||
| Category: | Server: Falcon | Severity: | S3 (Non-critical) |
| Version: | 6.0-BK | OS: | Linux |
| Assigned to: | Vladislav Vaintroub | Target Version: | 6.0.7 |
| Triage: | D3 (Medium) | ||
[12 Aug 2008 12:24]
Alexander Nozdrin
[12 Aug 2008 19:33]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/51437 2775 Vladislav Vaintroub 2008-08-12 Bug#38746 - falcon does not build on Linux with Valgrind enabled Add autoconf check for valgrind/memcheck.h
[12 Aug 2008 20:04]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/51441 2774 Vladislav Vaintroub 2008-08-12 Bug#38746 - falcon does not build on Linux with Valgrind enabled Add autoconf check for valgrind/memcheck.h
[13 Aug 2008 0:24]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/51465 2774 Vladislav Vaintroub 2008-08-12 Bug#38746 - Falcon does not build on Linux with valgrind enabled. If HAVE_purify is defined, falcon always included <valgrind/memcheck.h>. Add autoconf check for this header
[13 Aug 2008 0:47]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/51468 2774 Vladislav Vaintroub 2008-08-12 Bug#38746 - Falcon does not build on Linux with valgrind enabled. If HAVE_purify is defined, falcon always included <valgrind/memcheck.h>. Add autoconf check for this header
[13 Aug 2008 19:21]
Vladislav Vaintroub
pushed to mysql-6.0-falcon-team
[23 Aug 2008 2:41]
Kevin Lewis
This fix is in version 6.0.7
[27 Aug 2008 18:56]
Paul DuBois
Noted in 6.0.7 changelog. Falcon did not build on Linux with Valgrind enabled.
[28 Aug 2008 22:17]
Bugs System
Pushed into 6.0.7-alpha (revid:cbell@mysql.com-20080822132131-uveo6wiuecy6m2b8) (version source revid:cbell@mysql.com-20080822132131-uveo6wiuecy6m2b8) (pib:3)
[14 Sep 2008 1:45]
Bugs System
Pushed into 6.0.7-alpha (revid:vvaintroub@mysql.com-20080812222135-hpsek11718vmn97n) (version source revid:john.embretsen@sun.com-20080808091208-ht48kyzsk7rim74g) (pib:3)
