Bug#38746 - Falcon does not build on Linux with valgrind enabled.

If HAVE_purify is defined, falcon always included
<valgrind/memcheck.h>. Add autoconf check for this header